<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AuthorizationActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skipBtn"
        android:onClick="onSkipButtonClick"
        style="@style/buttonWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/skip"
        android:textSize="16sp"
        android:theme="@style/buttonWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="545dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skipBtn">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/lets_meet"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/about_you" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/enter_phone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="68dp"
                android:layout_height="54dp"
                android:layout_weight="0"
                android:background="@drawable/rounded_shape_border_left"
                android:gravity="center"
                android:text="@string/code_number"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_weight="01"
                android:background="@drawable/rounded_shape_border_right"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingLeft="12dp"
                android:textColorHint="@color/grey"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/toCardBtn"
            android:onClick="onConfirmBtnClick"
            style="@style/buttonGrey"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="24dp"
            android:padding="16dp"
            android:text="@string/continue_"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/policy"
            android:autoLink="web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/policy"
            android:textSize="12sp"
             />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>